# OpenSTC-dev

./: .gitignore  CMakeLists.txt  README.md
input_files/boundary_condition/: boundary   0.txt  inner   0.txt
input_files/chemistry/: H2_mech_mixing.inp  erf.txt
input_files/grid/: grid   0.grd
input_files/setup/: 0_global_control.txt  10_statistics.txt  1_grid_information.txt  2_scheme.txt  3_species_reactions.txt  4_laminar_turbulent.txt  5_boundary_condition.txt  7_output_control.txt  8_initialization.txt  9_transport_property.txt  default_settings.txt  monitor_points.txt
src/: AWENO.cu  AWENO.cuh  AusmP.cu  AusmP.cuh  BoundCond.cpp  BoundCond.cu  BoundCond.cuh  BoundCond.h  BoundaryIO.h  CMakeLists.txt  ChemData.cpp  ChemData.h  Constants.h  DPLUR.cu  DPLUR.cuh  DPLURHPP.cuh  DParameter.cu  DParameter.cuh  DParameter.h  DataCommunication.cu  DataCommunication.cuh  Define.h  Driver.cu  Driver.cuh  Field.cu  Field.h  FieldIO.h  FieldOperation.cu  FieldOperation.cuh  FiniteRateChem.cu  FiniteRateChem.cuh  FirstOrderEuler.cuh  FlameletDriver.cu  FlameletDriver.cuh  FlameletLib.cu  FlameletLib.cuh  HLLC.cu  HLLC.cuh  IOBase.h  IOManager.h  (+41 more)
src/gxl_lib/: Array.hpp  Math.hpp  Matrix.hpp  MyAtomic.cuh  MyString.cpp  MyString.h
